--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:theme="@style/Theme.RoyalMobileAdminApp"
         tools:targetApi="31">
         <activity
+            android:name=".product.Add_Brand_Activity"
+            android:exported="false" />
+        <activity
             android:name=".product.AllAccessoriesActivity"
             android:exported="false" />
         <activity
@@ -31,15 +34,17 @@
             android:exported="false" />
         <activity
             android:name=".activity.LoginActivity"
-            android:exported="false" />
-        <activity
-            android:name=".activity.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".activity.MainActivity"
+            android:exported="false">
+
         </activity>
     </application>
 
