--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,6 +90,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
     implementation "com.squareup.okhttp3:logging-interceptor:4.9.1"
+    implementation 'com.squareup.okhttp3:okhttp:4.9.1'
 
     //itext a
     implementation 'com.itextpdf.android:kernel-android:7.2.3'
