admin added successfully

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,12 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".activity.AddAdminActivity"
+            android:exported="false" />
+        <activity
+            android:name=".product.ProductActivityDetails"
+            android:exported="false" />
+        <activity
             android:name=".activity.ForgetPasswordActivity"
             android:exported="false" />
         <activity
@@ -46,7 +52,7 @@
             android:exported="false" />
         <activity
             android:name=".activity.LoginActivity"
-            android:exported="false"></activity>
+            android:exported="false" />
         <activity
             android:name=".activity.MainActivity"
             android:exported="true">
