--- a/app/build.gradle
+++ b/app/build.gradle
@@ -111,6 +111,9 @@ dependencies {
     implementation('androidx.datastore:datastore-preferences:1.0.0')
     implementation("androidx.datastore:datastore-preferences-core:1.0.0")
 
-    
+    //Desing
+    implementation 'androidx.viewpager:viewpager:1.0.0'
+    implementation 'androidx.gridlayout:gridlayout:1.0.0'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 
 }
