customer all order and its profile is complete

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,15 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".activity.CustomerDetailsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.AllCustomerActivity"
+            android:exported="false" />
+        <activity
+            android:name=".product.AllOrderActivity"
+            android:exported="false" />
+        <activity
             android:name=".product.AccessoriesDetailsActivity"
             android:exported="false" />
         <activity
@@ -60,9 +69,6 @@
             android:exported="false" />
         <activity
             android:name=".activity.LoginActivity"
-            android:exported="false" />
-        <activity
-            android:name=".activity.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -70,6 +76,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".activity.MainActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
