--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".activity.order_detail"
+            android:exported="false" />
+        <activity
             android:name=".activity.CustomerDetailsActivity"
             android:exported="false" />
         <activity
@@ -70,8 +73,7 @@
             android:exported="false" />
         <activity
             android:name=".activity.LoginActivity"
-            android:exported="false">
-        </activity>
+            android:exported="false"></activity>
         <activity
             android:name=".activity.MainActivity"
             android:exported="true">
@@ -81,8 +83,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <meta-data android:name="com.onesignal.NotificationServiceExtension"
-            android:value="com.ashish.royalmobileadminapp.NotificationServiceExtension"/>
+
+        <meta-data
+            android:name="com.onesignal.NotificationServiceExtension"
+            android:value="com.ashish.royalmobileadminapp.NotificationServiceExtension" />
     </application>
 
 </manifest>
